# language-gen

./: .gitignore  CMakeLists.txt  Makefile  construct.c  construct.h  initList.c  initList.h  lang-gen.c  lang-gen.h  langgen  langstructs.h  morpheme.c  morpheme.h  old.js  ortho.c  ortho.h  shuffle.c  shuffle.h  todo-list.txt  word.c  word.h
config/: consets  fsets  lsets  ssets  syllstruct  vowsets
config/ortho/: default
config/ortho/corth/: chinese  french  german  slavic
config/ortho/vorth/: diphthongs  doubles  umlaut  welsh
utils/: fileFunctions.c  fileFunctions.h  list.c  list.h.gch  node.h.gch  random.c  random.h  random.h.gch  shuffle.c  shufflecbkp  string.c  string.h  string.h.gch
